# src/main/java/org/huebert/ncbot/controller/dto/ParticipantUpdateRequest.java
@@ -1,0 +1,7 @@
+package org.huebert.ncbot.controller.dto;
+
+import lombok.Builder;
+
+@Builder
+public record ParticipantUpdateRequest(boolean blocked) {
+}
